--- a/src/components/chat/chat.css
+++ b/src/components/chat/chat.css
@@ -1,3 +1,165 @@
-.chat{
-    flex:8;
+.chat {
+  flex: 8;
+  border-left: 1px solid rgba(255, 255, 255, 0.17);
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  border-top-right-radius: 14px;
+  border-bottom-right-radius: 14px;
+}
+
+/* Chat Top */
+.chat .top {
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.17);
+}
+
+.selectedUser {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.selectedUser img {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.bio {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.bio span {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.bio p {
+  font-size: 14px;
+  font-weight: 300;
+  color: #a5a5a5;
+}
+
+.topIcons {
+  display: flex;
+  gap: 20px;
+}
+
+.topIcons img {
+  width: 20px;
+  height: 20px;
+}
+
+/* Chat Center */
+.center {
+  padding: 20px;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.message {
+  max-width: 70%;
+  display: flex;
+  gap: 20px;
+}
+
+.message img {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.messageContent {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.messageContent p {
+  padding: 20px;
+  background-color: rgba(32, 77, 63, 0.2);
+  border-radius: 10px;
+}
+
+.messageContent span {
+  font-size: 13px;
+}
+
+.messageContent img {
+  width: 100%;
+  height: 300px;
+  border-radius: 10px;
+  object-fit: cover;
+}
+
+.personal {
+  align-self: flex-end;
+}
+
+.personal p {
+  background-color: #17775f;
+}
+
+
+/* Chat Bottom */
+.bottom {
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-top: 1px solid #dddddd35;
+  gap: 20px;
+  margin-top: auto; /* to put bottom*/
+}
+
+.bottomIcons {
+  display: flex;
+  gap: 20px;
+}
+
+.bottom img {
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+}
+
+.bottom input {
+  flex: 1;
+  background-color: rgba(38, 53, 54, 0.5);
+  border: none;
+  outline: none;
+  color: white;
+  padding: 20px;
+  border-radius: 10px;
+  font-size: 16px;
+}
+
+.emoji {
+  position: relative;
+}
+
+.picker {
+  position: absolute;
+  bottom: 50px;
+  right: 0;
+}
+
+.sendButton {
+  background-color: #17775f;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
