--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,10 @@ body {
   border: 1px solid rgba(255, 255, 255, 0.17);
   display: flex;
 }
+
+.scroll{
+  overflow: scroll;
+  overflow-x: hidden;
+  scrollbar-width: thin;
+  scrollbar-color:#ffffff15 rgba(16, 19, 19, 0.3);
+}
