--- a/src/index.css
+++ b/src/index.css
@@ -29,5 +29,5 @@ body {
   overflow: scroll;
   overflow-x: hidden;
   scrollbar-width: thin;
-  scrollbar-color:#ffffff15 rgba(16, 19, 19, 0.3);
+  scrollbar-color:#ffffff15 rgb(13, 24, 25);
 }
