Update index.css - starter

--- a/src/index.css
+++ b/src/index.css
@@ -29,5 +29,5 @@ body {
   overflow: scroll;
   overflow-x: hidden;
   scrollbar-width: thin;
-  scrollbar-color:#ffffff15 rgb(13, 24, 25);
+  scrollbar-color:#ffffff15 rgb(13, 24, 25, 0.4);
 }
