--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -3,5 +3,5 @@
     overflow: scroll;
     overflow-x: hidden;
     scrollbar-width: thin;
-    scrollbar-color:#ffffff15 rgb(13, 24, 25);
+    scrollbar-color:#ffffff15 rgb(13, 24, 25, 0.4);
 }
