--- a/src/components/chat/chat.css
+++ b/src/components/chat/chat.css
@@ -6,6 +6,7 @@
   flex-direction: column;
   border-top-right-radius: 14px;
   border-bottom-right-radius: 14px;
+  position: relative; 
 }
 
 /* Chat Top */
@@ -55,6 +56,7 @@
 .topIcons img {
   width: 20px;
   height: 20px;
+  cursor: pointer;
 }
 
 /* Chat Center */
@@ -80,7 +82,6 @@
 }
 
 .messageContent {
-  flex: 1;
   display: flex;
   flex-direction: column;
   gap: 5px;
