--- a/src/components/sidebar/personalInfo/personalInfo.css
+++ b/src/components/sidebar/personalInfo/personalInfo.css
@@ -3,6 +3,9 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: sticky;
+    top: 0;
+    background-color: rgb(13, 24, 25);
 }
 
 .user{
