--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -1,3 +1,7 @@
 .sidebar{
     flex:3;
+    overflow: scroll;
+    overflow-x: hidden;
+    scrollbar-width: thin;
+    scrollbar-color:#ffffff15 rgb(13, 24, 25, 0.4);
 }
